CMS7-7807 Fix color of input fields - improved contrast

--- a/src/less/_variables.less
+++ b/src/less/_variables.less
@@ -39,3 +39,8 @@
 @panel-inner-border:      @gray-darker;
 @panel-default-heading-bg:@gray;
 @panel-footer-bg:         @gray;
+
+// Forms
+// -------------------------
+
+@input-color: @gray-dark;
